<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Login">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/logo"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cirle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="110sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="32sp"
                android:text="@string/clockmein"
                android:textSize="44sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="50sp"
            android:layout_below="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="370dp"
                    android:layout_gravity="center"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:hint="@string/username"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusTopStart="20sp"
                    app:prefixText="clockme.com/"
                    app:prefixTextColor="@color/black"
                    app:startIconDrawable="@drawable/baseline_account_circle_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:startIconDrawable="@mipmap/lock"
                    app:boxCornerRadiusTopStart="20sp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    android:layout_gravity="center"
                    android:layout_width="370dp"
                    android:layout_marginTop="20sp"
                    android:layout_height="60dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


                <Button
                    android:id="@+id/login"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login"
                    android:layout_marginTop="40sp"
                    android:layout_width="350dp"
                    android:layout_height="60sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>