<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout

        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/logo"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cirle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="110sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginStart="32sp"
                    android:text="@string/clockmein"
                    android:textSize="44sp"
                    android:textStyle="bold"
                    />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/text"
            android:layout_marginTop="30sp"
            android:layout_below="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_marginStart="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_your_time_with_ease"
                android:textSize="60sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_below="@id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/click_start"
                android:layout_width="220sp"
                android:layout_height="70sp"
                android:layout_centerInParent="true"
                android:background="#E8AA30"
                android:gravity="center"
                android:text="@string/get_started"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>